# ngrav

./: README.md  README.qmd  pyproject.toml
configs/: three_body.json  two_body.json
ngrav/: body.py  collision_detection.py  forces.py  integrators.py  plotter.py  slingshot_detection.py  system.py
scripts/: cold_collapse.py  ring.py  simple_run.py
