[project]
name = "ngrav"
version = "0.1.0"
description = "2D gravitational simulator"
authors = [{ name="Evan Frangipane", email="frangipane.evan@gmail.com" }]
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ngrav"]

